# Term-Structure-Analysis

./: .gitignore  pyproject.toml
termstruc/: config.py  main.py
termstruc/helper/: save_data.py
termstruc/src/: descarga.py
test/: test_descarga.py  test_descarga_api.py  test_save_data.py
